src/assets/scss/style.scss
@import "vars";

*{
	padding: 0;
	margin: 0;
	box-sizing: border-box;
	font-family: sans-serif;
}

html{
	font-size: 10px;
}

body{
	font-size: 1.4rem;
	font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

.page__content{
	width: 160ch;
	padding-top: 9em;
	margin: 0 auto;
}

@import "blocks/nav";
@import "blocks/calendar";
@import "blocks/poster";

